[package]
name = "queuetycoon"
version = "0.1.0"
authors = ["Çağatay Duru <durucagatay01@gmail.com>"]
edition = "2021"
repository = "https://github.com/ChagataiDuru/QueueTycoon"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.23.4"
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
bevy_hanabi = "0.10"
leafwing-input-manager = "0.13"
rand = "0.8"
